--- a/landscape.css
+++ b/landscape.css
@@ -6,7 +6,7 @@
     
 }
 
-.l{
+.linebreak{
 
     width: 100vw;
     background: black;
@@ -32,8 +32,13 @@ img{
 
 .sheethead{
 
+    
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
+    margin-left:10px;
+    margin-right:10px;
+    margin-top:3px;
+    font-size: 40px;
 }
 
 
@@ -51,13 +56,6 @@ border-radius:1.5% 1.5%;
 
 width: 50%;
 margin:10px;
-
-}
-
-.righttext{
-
-    align-self:center;
-    
 
 }
 
@@ -88,6 +86,8 @@ font-size:4vw;
     display: flex;
   justify-content:flex-end;
   margin-top:35px;
+  margin-bottom: 10px;
+  
 }
 
 .class3 > .text {
@@ -110,9 +110,9 @@ font-size:4vw;
 
 .class4{
 
-    display: flex;
+    display: none;
     font-size: 30px;
-
+  
 
 }
 
