--- a/potrait.css
+++ b/potrait.css
@@ -6,18 +6,19 @@
     
 }
 
+.linebreak{
+
+    width: 100vw;
+    background: black;
+    height: 3px;
+}
+
 a{
 
     text-decoration: none;
     color: white;
 }
 
-.l{
-
-    width: 100vw;
-    background: black;
-    height: 3px;
-}
 
 
 img{
@@ -33,23 +34,15 @@ img{
 .sheethead{
 
     display: flex;
-    flex-direction: column;
-
-}
-
-.righttext{
-
-    margin-top:-10px;
+   justify-content: center;
     
-
-}
-
-.lefttext{
-
-    align-self:center;
+    margin-top:10px;
+    font-size: 25px;
     
-
 }
+
+
+
 
 .sheet{
 
@@ -90,22 +83,24 @@ margin-left:10px;
 
     display: flex;
     font-size:15px;
-    margin-top:2vw;
+    margin-top:15px;
     margin-left:10px;
 }
 
 .class3{
 
     display: flex;
-  justify-content:flex-end;
-  margin-top:20px;
+  justify-content:center;
+  margin-top:30px;
   margin-right:10px;
+  margin-bottom: 10px;
  
 }
 
 .class3 > .text {
 
     font-size:10px;
+    
 }
 
 .class3 > .text {
@@ -124,13 +119,12 @@ margin-left:10px;
 
 .class4{
 
-    display: flex;
+    display: none;
     font-size: 20px;
     margin-left:10px;
     margin-top:20px;
     margin-bottom:10px;
-  
-   
+    
     
 }
 
